diesel_compile_tests/tests/ui/as_changeset_on_non_struct.stderr
error: This derive can only be used on structs
  --> $DIR/as_changeset_on_non_struct.rs:12:10
   |
12 | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

